--- a/src/Components/Cards/Card.css
+++ b/src/Components/Cards/Card.css
@@ -8,3 +8,17 @@
 .img{
     width:25px;
 }
+
+.addimg{
+    width:70px;
+}
+
+.add{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 26px;
+    color: darkblue;
+    font-weight: 800;
+    padding-top: 5px;
+}
