--- a/src/Components/Cards/Card.css
+++ b/src/Components/Cards/Card.css
@@ -5,20 +5,30 @@
     justify-content: space-between;
 }
 
-.img{
+.deleteicon{
     width:25px;
+    color:black;
 }
 
-.addimg{
-    width:70px;
+.icon{
+    color:red;
+    width:50px;
+    font-size: 50px;
+    padding-left:20px;
+
 }
 
-.add{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 26px;
-    color: darkblue;
-    font-weight: 800;
-    padding-top: 5px;
+
+
+
+.deleteicon:hover{
+
+    color:red;
+    font-size:35px ;
+    
 }
+
+
+
+
+
